feat: implemented jwt guard

--- a/.env.example
+++ b/.env.example
@@ -7,3 +7,6 @@ POSTGRES_PASSWORD=databasepassword
 POSTGRES_DB=dbname
 
 DATABASE_URL="postgresql://johndoe:databasepassword@localhost:5432/dbname?schema=public"
+
+JWT_SECRET=secretkeyforjwt
+JWT_EXPIRES_IN=1h
